y.output
Grammar

    0 $accept: statement $end

    1 statement: KEYWORD_RECALL scope for_exp while_exp nooptimize in
    2          | KEYWORD_RECALL error

    3 scope: ε
    4      | KEYWORD_ALL
    5      | next
    6      | record
    7      | KEYWORD_REST

    8 next: KEYWORD_NEXT LITERAL_NUMBER
    9     | KEYWORD_NEXT error

   10 record: KEYWORD_RECORD LITERAL_NUMBER
   11       | KEYWORD_RECORD error

   12 for_exp: ε
   13        | KEYWORD_FOR expr_l
   14        | KEYWORD_FOR error

   15 while_exp: ε
   16          | KEYWORD_WHILE expr_l
   17          | KEYWORD_WHILE error

   18 nooptimize: ε
   19           | KEYWORD_NOOPTIMIZE

   20 in: ε
   21   | KEYWORD_IN LITERAL_NUMBER
   22   | KEYWORD_IN IDENTIFIER
   23   | KEYWORD_IN error

   24 expr_l: operand_l OPERATOR_LOGICAL operand_l

   25 operand_l: LITERAL_STRING
   26          | IDENTIFIER
   27          | expr_a

   28 expr_a: LITERAL_NUMBER
   29       | expr_a '+' expr_a
   30       | expr_a '-' expr_a
   31       | expr_a '*' expr_a
   32       | expr_a '/' expr_a


Terminals, with rules where they appear

    $end (0) 0
    '*' (42) 31
    '+' (43) 29
    '-' (45) 30
    '/' (47) 32
    error (256) 2 9 11 14 17 23
    KEYWORD_RECALL (258) 1 2
    KEYWORD_ALL (259) 4
    KEYWORD_NEXT (260) 8 9
    KEYWORD_RECORD (261) 10 11
    KEYWORD_REST (262) 7
    KEYWORD_FOR (263) 13 14
    KEYWORD_WHILE (264) 16 17
    KEYWORD_NOOPTIMIZE (265) 19
    KEYWORD_IN (266) 21 22 23
    IDENTIFIER (267) 22 26
    OPERATOR_LOGICAL (268) 24
    LITERAL_NUMBER (269) 8 10 21 28
    LITERAL_STRING (270) 25


Nonterminals, with rules where they appear

    $accept (20)
        on left: 0
    statement (21)
        on left: 1 2
        on right: 0
    scope (22)
        on left: 3 4 5 6 7
        on right: 1
    next (23)
        on left: 8 9
        on right: 5
    record (24)
        on left: 10 11
        on right: 6
    for_exp (25)
        on left: 12 13 14
        on right: 1
    while_exp (26)
        on left: 15 16 17
        on right: 1
    nooptimize (27)
        on left: 18 19
        on right: 1
    in (28)
        on left: 20 21 22 23
        on right: 1
    expr_l (29)
        on left: 24
        on right: 13 16
    operand_l (30)
        on left: 25 26 27
        on right: 24
    expr_a (31)
        on left: 28 29 30 31 32
        on right: 27 29 30 31 32


State 0

    0 $accept: • statement $end

    KEYWORD_RECALL  shift, and go to state 1

    statement  go to state 2


State 1

    1 statement: KEYWORD_RECALL • scope for_exp while_exp nooptimize in
    2          | KEYWORD_RECALL • error

    error           shift, and go to state 3
    KEYWORD_ALL     shift, and go to state 4
    KEYWORD_NEXT    shift, and go to state 5
    KEYWORD_RECORD  shift, and go to state 6
    KEYWORD_REST    shift, and go to state 7

    $end                reduce using rule 3 (scope)
    KEYWORD_FOR         reduce using rule 3 (scope)
    KEYWORD_WHILE       reduce using rule 3 (scope)
    KEYWORD_NOOPTIMIZE  reduce using rule 3 (scope)
    KEYWORD_IN          reduce using rule 3 (scope)

    scope   go to state 8
    next    go to state 9
    record  go to state 10


State 2

    0 $accept: statement • $end

    $end  shift, and go to state 11


State 3

    2 statement: KEYWORD_RECALL error •

    $default  reduce using rule 2 (statement)


State 4

    4 scope: KEYWORD_ALL •

    $default  reduce using rule 4 (scope)


State 5

    8 next: KEYWORD_NEXT • LITERAL_NUMBER
    9     | KEYWORD_NEXT • error

    error           shift, and go to state 12
    LITERAL_NUMBER  shift, and go to state 13


State 6

   10 record: KEYWORD_RECORD • LITERAL_NUMBER
   11       | KEYWORD_RECORD • error

    error           shift, and go to state 14
    LITERAL_NUMBER  shift, and go to state 15


State 7

    7 scope: KEYWORD_REST •

    $default  reduce using rule 7 (scope)


State 8

    1 statement: KEYWORD_RECALL scope • for_exp while_exp nooptimize in

    KEYWORD_FOR  shift, and go to state 16

    $default  reduce using rule 12 (for_exp)

    for_exp  go to state 17


State 9

    5 scope: next •

    $default  reduce using rule 5 (scope)


State 10

    6 scope: record •

    $default  reduce using rule 6 (scope)


State 11

    0 $accept: statement $end •

    $default  accept


State 12

    9 next: KEYWORD_NEXT error •

    $default  reduce using rule 9 (next)


State 13

    8 next: KEYWORD_NEXT LITERAL_NUMBER •

    $default  reduce using rule 8 (next)


State 14

   11 record: KEYWORD_RECORD error •

    $default  reduce using rule 11 (record)


State 15

   10 record: KEYWORD_RECORD LITERAL_NUMBER •

    $default  reduce using rule 10 (record)


State 16

   13 for_exp: KEYWORD_FOR • expr_l
   14        | KEYWORD_FOR • error

    error           shift, and go to state 18
    IDENTIFIER      shift, and go to state 19
    LITERAL_NUMBER  shift, and go to state 20
    LITERAL_STRING  shift, and go to state 21

    expr_l     go to state 22
    operand_l  go to state 23
    expr_a     go to state 24


State 17

    1 statement: KEYWORD_RECALL scope for_exp • while_exp nooptimize in

    KEYWORD_WHILE  shift, and go to state 25

    $default  reduce using rule 15 (while_exp)

    while_exp  go to state 26


State 18

   14 for_exp: KEYWORD_FOR error •

    $default  reduce using rule 14 (for_exp)


State 19

   26 operand_l: IDENTIFIER •

    $default  reduce using rule 26 (operand_l)


State 20

   28 expr_a: LITERAL_NUMBER •

    $default  reduce using rule 28 (expr_a)


State 21

   25 operand_l: LITERAL_STRING •

    $default  reduce using rule 25 (operand_l)


State 22

   13 for_exp: KEYWORD_FOR expr_l •

    $default  reduce using rule 13 (for_exp)


State 23

   24 expr_l: operand_l • OPERATOR_LOGICAL operand_l

    OPERATOR_LOGICAL  shift, and go to state 27


State 24

   27 operand_l: expr_a •
   29 expr_a: expr_a • '+' expr_a
   30       | expr_a • '-' expr_a
   31       | expr_a • '*' expr_a
   32       | expr_a • '/' expr_a

    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31

    $default  reduce using rule 27 (operand_l)


State 25

   16 while_exp: KEYWORD_WHILE • expr_l
   17          | KEYWORD_WHILE • error

    error           shift, and go to state 32
    IDENTIFIER      shift, and go to state 19
    LITERAL_NUMBER  shift, and go to state 20
    LITERAL_STRING  shift, and go to state 21

    expr_l     go to state 33
    operand_l  go to state 23
    expr_a     go to state 24


State 26

    1 statement: KEYWORD_RECALL scope for_exp while_exp • nooptimize in

    KEYWORD_NOOPTIMIZE  shift, and go to state 34

    $default  reduce using rule 18 (nooptimize)

    nooptimize  go to state 35


State 27

   24 expr_l: operand_l OPERATOR_LOGICAL • operand_l

    IDENTIFIER      shift, and go to state 19
    LITERAL_NUMBER  shift, and go to state 20
    LITERAL_STRING  shift, and go to state 21

    operand_l  go to state 36
    expr_a     go to state 24


State 28

   29 expr_a: expr_a '+' • expr_a

    LITERAL_NUMBER  shift, and go to state 20

    expr_a  go to state 37


State 29

   30 expr_a: expr_a '-' • expr_a

    LITERAL_NUMBER  shift, and go to state 20

    expr_a  go to state 38


State 30

   31 expr_a: expr_a '*' • expr_a

    LITERAL_NUMBER  shift, and go to state 20

    expr_a  go to state 39


State 31

   32 expr_a: expr_a '/' • expr_a

    LITERAL_NUMBER  shift, and go to state 20

    expr_a  go to state 40


State 32

   17 while_exp: KEYWORD_WHILE error •

    $default  reduce using rule 17 (while_exp)


State 33

   16 while_exp: KEYWORD_WHILE expr_l •

    $default  reduce using rule 16 (while_exp)


State 34

   19 nooptimize: KEYWORD_NOOPTIMIZE •

    $default  reduce using rule 19 (nooptimize)


State 35

    1 statement: KEYWORD_RECALL scope for_exp while_exp nooptimize • in

    KEYWORD_IN  shift, and go to state 41

    $default  reduce using rule 20 (in)

    in  go to state 42


State 36

   24 expr_l: operand_l OPERATOR_LOGICAL operand_l •

    $default  reduce using rule 24 (expr_l)


State 37

   29 expr_a: expr_a • '+' expr_a
   29       | expr_a '+' expr_a •
   30       | expr_a • '-' expr_a
   31       | expr_a • '*' expr_a
   32       | expr_a • '/' expr_a

    '*'  shift, and go to state 30
    '/'  shift, and go to state 31

    $default  reduce using rule 29 (expr_a)


State 38

   29 expr_a: expr_a • '+' expr_a
   30       | expr_a • '-' expr_a
   30       | expr_a '-' expr_a •
   31       | expr_a • '*' expr_a
   32       | expr_a • '/' expr_a

    '*'  shift, and go to state 30
    '/'  shift, and go to state 31

    $default  reduce using rule 30 (expr_a)


State 39

   29 expr_a: expr_a • '+' expr_a
   30       | expr_a • '-' expr_a
   31       | expr_a • '*' expr_a
   31       | expr_a '*' expr_a •
   32       | expr_a • '/' expr_a

    $default  reduce using rule 31 (expr_a)


State 40

   29 expr_a: expr_a • '+' expr_a
   30       | expr_a • '-' expr_a
   31       | expr_a • '*' expr_a
   32       | expr_a • '/' expr_a
   32       | expr_a '/' expr_a •

    $default  reduce using rule 32 (expr_a)


State 41

   21 in: KEYWORD_IN • LITERAL_NUMBER
   22   | KEYWORD_IN • IDENTIFIER
   23   | KEYWORD_IN • error

    error           shift, and go to state 43
    IDENTIFIER      shift, and go to state 44
    LITERAL_NUMBER  shift, and go to state 45


State 42

    1 statement: KEYWORD_RECALL scope for_exp while_exp nooptimize in •

    $default  reduce using rule 1 (statement)


State 43

   23 in: KEYWORD_IN error •

    $default  reduce using rule 23 (in)


State 44

   22 in: KEYWORD_IN IDENTIFIER •

    $default  reduce using rule 22 (in)


State 45

   21 in: KEYWORD_IN LITERAL_NUMBER •

    $default  reduce using rule 21 (in)
